<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.unlibrary.exchange.ExchangeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".unlibrary.ExchangeFragment">

        <EditText
            android:id="@+id/search_exchange_book"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:autofillHints=""
            android:background="@drawable/search_input"
            android:drawableEnd="@drawable/ic_baseline_search_24"
            android:drawablePadding="10dp"
            android:elevation="5dp"
            android:ems="10"
            android:hint="@string/search_bar_hint"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@={viewModel.searchText}"/>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/exchange_book_list"
            android:name="com.example.unlibrary.book_list.BooksFragment"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_exchange_book" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
