<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.unlibrary.exchange.ExchangeViewModel" />

        <import type="android.view.View" />

    </data>

    <FrameLayout
        android:id="@+id/exchange_book_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/bookImageButton"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@null"
                android:scaleType="centerCrop"
                app:layout_constraintHeight_percent="0.4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:imagePath="@{viewModel.currentBook.photo}" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/add_request"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginBottom="24dp"
                android:backgroundTint="@color/colorAccent"
                android:contentDescription="@string/add_request_description"
                android:visibility="@{viewModel.showRequestButton() ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toBottomOf="@+id/bookImageButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bookImageButton"
                app:srcCompat="@drawable/ic_add" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin"
                android:layout_marginTop="16dp"
                android:text="@string/title"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bookImageButton" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin"
                android:layout_marginTop="8dp"
                android:text="@{viewModel.currentBook.title}"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin"
                android:layout_marginTop="16dp"
                android:text="@string/author"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin"
                android:layout_marginTop="8dp"
                android:text="@{viewModel.currentBook.author}"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin"
                android:layout_marginTop="16dp"
                android:text="@string/isbn"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin"
                android:layout_marginTop="8dp"
                android:text="@{viewModel.currentBook.isbn}"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin"
                android:layout_marginTop="16dp"
                android:text="OWNER"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView10"
                app:layout_constraintVertical_bias="0.08"
                tools:layout_editor_absoluteX="0dp">

                <TextView
                    android:id="@+id/ownerUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/text_margin"
                    android:layout_marginTop="4dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@{viewModel.currentBookOwner.username}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Username" />

                <TextView
                    android:id="@+id/ownerEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/text_margin"
                    android:layout_marginEnd="8dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@{viewModel.currentBookOwner.email}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ownerUsername"
                    tools:text="email@email.com" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/bookImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            tools:imagePath="@{viewModel.currentBook.photo}" />

    </FrameLayout>

</layout>
